Directory change, new external file download
Changed directory name to fit contents. Added .sh file available for download at Steam guide

--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
     <title>erm...</title>
     <head>
         <link href="css/global.css" rel="stylesheet" type="text/css">
-        <link href="rsrc/pics/sona.png" rel="icon" type="image/icon type">
+        <link href="dl/pics/sona.png" rel="icon" type="image/icon type">
     </head>
     <body>
         <div class="main" style="text-align: center;">
@@ -105,7 +105,7 @@
                 <br>
                 <br>
                 <br>
-                <img src="rsrc/pics/ratstare.webp">
+                <img src="dl/pics/ratstare.webp">
                 <p style="margin-top: 6px;">cheesed to meet you</p>
             </p>
         </div>
