--- a/friends/alyx.html
+++ b/friends/alyx.html
@@ -4,7 +4,7 @@
         <base target="_blank">
         <link href="../css/global.css" rel="stylesheet" type="text/css">
         <link href="../css/friend.css" rel="stylesheet" type="text/css">
-        <link href="../rsrc/friends/alyx.png" rel="icon" type="image/icon type">
+        <link href="../dl/friends/alyx.png" rel="icon" type="image/icon type">
     </head>
     <body>
         <div class="main">
@@ -12,7 +12,7 @@
                 <h1 class="header" style="background-image: -webkit-linear-gradient(left, #9649ad, #2f00a6)">ALYX (ferging!!)</h1>
                 <hr>
             </div>
-            <img class="profile" style="background-color: #3b1168" src="../rsrc/friends/alyx.png">
+            <img class="profile" style="background-color: #3b1168" src="../dl/friends/alyx.png">
             <p>
                 (wip lol. message me on discord if this still shows up as unfinished)
             </p>
