--- a/friends/centuryy.html
+++ b/friends/centuryy.html
@@ -4,7 +4,7 @@
         <base target="_blank">
         <link href="../css/global.css" rel="stylesheet" type="text/css">
         <link href="../css/friend.css" rel="stylesheet" type="text/css">
-        <link href="../rsrc/friends/centuryy.png" rel="icon" type="image/icon type">
+        <link href="../dl/friends/centuryy.png" rel="icon" type="image/icon type">
     </head>
     <body>
         <div class="main">
@@ -12,7 +12,7 @@
                 <h1 class="header" style="background-image: -webkit-linear-gradient(left, #ff9222, #ffd222)">CENTURYY (shapez enjoyer)</h1>
                 <hr>
             </div>
-            <img class="profile" style="background-color: #ffb222" src="../rsrc/friends/centuryy.png">
+            <img class="profile" style="background-color: #ffb222" src="../dl/friends/centuryy.png">
             <p>
                 I don't know this person that much on a personal level, but I can guarantee you that they're one of the best people and one of the most 
                 understanding when it comes to strong emotions. In terms of hobbies and interests, it's really hit and miss - some are really general like the internet, 
