--- a/friends/jessica.html
+++ b/friends/jessica.html
@@ -4,7 +4,7 @@
         <base target="_blank">
         <link href="../css/global.css" rel="stylesheet" type="text/css">
         <link href="../css/friend.css" rel="stylesheet" type="text/css">
-        <link href="../rsrc/friends/teshyrr.png" rel="icon" type="image/icon type">
+        <link href="../dl/friends/teshyrr.png" rel="icon" type="image/icon type">
     </head>
     <body>
         <div class="main">
@@ -12,7 +12,7 @@
                 <h1 class="header" style="background-image: -webkit-linear-gradient(left, #aa86aa, #ff86ff)">JESSICA (aka teshyrr)</h1>
                 <hr>
             </div>
-            <img class="profile" style="background-color: #ff86ff" src="../rsrc/friends/teshyrr.png">
+            <img class="profile" style="background-color: #ff86ff" src="../dl/friends/teshyrr.png">
             <p>
                 I honestly don't remember when or where I first met this person. It was sometime during the early months of 2021, possibly on a self-help server I 
                 joined due to my declining mental status at the time. When we met each other again on a random casual game on CS:GO two years later in June 2023, 
