--- a/friends/pappy.html
+++ b/friends/pappy.html
@@ -4,7 +4,7 @@
         <base target="_blank">
         <link href="../css/global.css" rel="stylesheet" type="text/css">
         <link href="../css/friend.css" rel="stylesheet" type="text/css">
-        <link href="../rsrc/friends/pappy.png" rel="icon" type="image/icon type">
+        <link href="../dl/friends/pappy.png" rel="icon" type="image/icon type">
     </head>
     <body>
         <div class="main">
@@ -12,7 +12,7 @@
                 <h1 class="header" style="background-image: -webkit-linear-gradient(left, #88074e, #fd074e)">CHONKIE (aka pappy)</h1>
                 <hr>
             </div>
-            <img class="profile" style="background-color: #f8074e" src="../rsrc/friends/pappy.png">
+            <img class="profile" style="background-color: #f8074e" src="../dl/friends/pappy.png">
             <p>
                 I first met this person in July 2020 when we were both quarantined little guys trying to make the best out of a shitty situation thanks to 
                 COVID-19. We found out that we had a lot of mutual interests in gaming and memes and often agreed on a lot of the same politics, if not 
