--- a/friends/qwerty.html
+++ b/friends/qwerty.html
@@ -4,7 +4,7 @@
         <base target="_blank">
         <link href="../css/global.css" rel="stylesheet" type="text/css">
         <link href="../css/friend.css" rel="stylesheet" type="text/css">
-        <link href="../rsrc/friends/qwerty.png" rel="icon" type="image/icon type">
+        <link href="../dl/friends/qwerty.png" rel="icon" type="image/icon type">
     </head>
     <body>
         <div class="main">
@@ -12,7 +12,7 @@
                 <h1 class="header" style="background-image: -webkit-linear-gradient(left, #0505af, #0505ff)">ASDASDDADS (aka qwerty enthusiast)</h1>
                 <hr>
             </div>
-            <img class="profile" style="background-color: #0505ef" src="../rsrc/friends/qwerty.png">
+            <img class="profile" style="background-color: #0505ef" src="../dl/friends/qwerty.png">
             <p>
                 A really mysterious and anonymous Brazilian, yet still a good friend. I personally do not message this person on an everyday basis like some others on 
                 this list, but their hobbies and interests (usually involving technology and hardware) are still expressed every once in a while. Like centuryy, I 
