--- a/goofs/leekspin.html
+++ b/goofs/leekspin.html
@@ -3,11 +3,11 @@
         <title>leekspin</title>
         <base target="_blank">
         <link href="../css/global.css" rel="stylesheet" type="text/css">
-        <link href="../rsrc/leekspin/leek.png" rel="icon" type="image/icon type">
+        <link href="../dl/leekspin/leek.png" rel="icon" type="image/icon type">
     </head>
     <body>
         <div style="text-align: center; padding: 100px;">
-            <embed src="../rsrc/leekspin/leekspin.gif">
+            <embed src="../dl/leekspin/leekspin.gif">
             <p>You have witnessed <b id="spins">0</b> spins!</p>
         </div>
         <script>
