--- a/goofs/sticksfight.html
+++ b/goofs/sticksfight.html
@@ -18,9 +18,9 @@
                 const player = ruffle.createPlayer();
                 const container = document.getElementById("container");
                 container.appendChild(player);
-                player.load("../rsrc/ruffle/sticksfight.swf");
+                player.load("../dl/ruffle/sticksfight.swf");
             });
         </script>
-        <embed src="../rsrc/ruffle/sticksfight.swf" width="1100px" height="800px"></embed>
+        <embed src="../dl/ruffle/sticksfight.swf" width="1100px" height="800px"></embed>
     </body>
 </html>
