--- a/directory/friends.html
+++ b/directory/friends.html
@@ -4,7 +4,7 @@
         <base target="_blank">
         <link href="../css/global.css" rel="stylesheet" type="text/css">
         <link href="../css/directorystyle.css" rel="stylesheet" type="text/css">
-        <link href="../rsrc/pics/heart.png" rel="icon" type="image/icon type">
+        <link href="../dl/pics/heart.png" rel="icon" type="image/icon type">
     </head>
     <body>
         <div class="main">
