--- a/friends/sara.html
+++ b/friends/sara.html
@@ -4,7 +4,7 @@
         <base target="_blank">
         <link href="../css/global.css" rel="stylesheet" type="text/css">
         <link href="../css/friend.css" rel="stylesheet" type="text/css">
-        <link href="../rsrc/friends/sara.png" rel="icon" type="image/icon type">
+        <link href="../dl/friends/sara.png" rel="icon" type="image/icon type">
     </head>
     <body>
         <div class="main">
@@ -12,7 +12,7 @@
                 <h1 class="header" style="background-image: -webkit-linear-gradient(left, #f0a0b0, #ffdfbf)">SARA (aka saraistupid)</h1>
                 <hr>
             </div>
-            <img class="profile" style="background-color: #f7a9b8" src="../rsrc/friends/sara.png">
+            <img class="profile" style="background-color: #f7a9b8" src="../dl/friends/sara.png">
             <p>
                 I met this person recently on a trans/phobe server (don't ask, I don't know either) and we had quite a few similar interests. Some of those interests include 
                 Arch Linux, desktop environments, web development (they even have <a href="https://saraistupid.github.io">their own website!</a>), among many other tech type 
