--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <base target="_blank">
         <link href="css/global.css" rel="stylesheet" type="text/css">
         <link href="css/index.css" rel="stylesheet" type="text/css">
-        <link href="rsrc/pics/sona.png" rel="icon" type="image/icon type">
+        <link href="dl/pics/sona.png" rel="icon" type="image/icon type">
     </head>
     <body>
         <div class="main">
