wrong site header

--- a/directory/goofs.html
+++ b/directory/goofs.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="main">
-            <h1 style="margin: 0; color: blueviolet">friends list</h1>
+            <h1 style="margin: 0; color: blueviolet">goofy web projects</h1>
             <hr>
             <h2 style="margin: 0 0 3px 0;">
                 <a href="../goofs/leekspin">leekspin</a> <span class="note">(recreation of classic website)</span><br>
